--- a/results.ipynb
+++ b/results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3c8a3705-3373-4aa2-b239-81351364aeeb",
    "metadata": {},
    "outputs": [
@@ -12,13 +12,13 @@
      "text": [
       "[detect] {'bg': 3419.0, 'sigma': 13.343399999999999, 'thr': 3485.717, 'n_labels': 13846, 'n_cat': 2307}\n",
       "[kNN] kept 2100 / 2307 detections after halo removal\n",
-      "Saved overlay: C:\\Users\\wz2523\\OneDrive - Imperial College London\\Lab Astro\\Astro\\Astro\\Fits_Data\\outputs\\detections_overlay_knn.jpg\n",
+      "Saved overlay: c:\\Users\\asus\\OneDrive - Imperial College London\\Lab Astro\\Astro\\Astro\\Fits_Data\\outputs\\detections_overlay_knn.jpg\n",
       "[classify] usable photometry for 2026 objects\n",
       "[classify] stars=21, galaxies=2005\n",
       "[fit] slope a = 0.368 ± 0.005, intercept b = -2.87 ± 0.08\n",
       "[fit] mag range used: [11.50, 16.25], points = 20\n",
-      "Saved logN (all/stars/gals): C:\\Users\\wz2523\\OneDrive - Imperial College London\\Lab Astro\\Astro\\Astro\\Fits_Data\\outputs\\logN_all_stars_gals.jpg\n",
-      "Saved logN (galaxies+fit): C:\\Users\\wz2523\\OneDrive - Imperial College London\\Lab Astro\\Astro\\Astro\\Fits_Data\\outputs\\logN_galaxies_weightedfit.jpg\n"
+      "Saved logN (all/stars/gals): c:\\Users\\asus\\OneDrive - Imperial College London\\Lab Astro\\Astro\\Astro\\Fits_Data\\outputs\\logN_all_stars_gals.jpg\n",
+      "Saved logN (galaxies+fit): c:\\Users\\asus\\OneDrive - Imperial College London\\Lab Astro\\Astro\\Astro\\Fits_Data\\outputs\\logN_galaxies_weightedfit.jpg\n"
      ]
     }
    ],
@@ -427,17 +427,58 @@
     "    plt.close()\n",
     "\n",
     "\n",
-    "def plot_logN_all_stars_gals(m_all, y_all, m_s, y_s, m_g, y_g, fit_res, fname):\n",
-    "    plt.figure(figsize=(8, 5))\n",
-    "    if m_all is not None: plt.plot(m_all, y_all, \"-o\", ms=3, label=\"All\")\n",
-    "    if m_s is not None:   plt.plot(m_s,   y_s,   \"-o\", ms=3, label=\"Stars\")\n",
-    "    if m_g is not None:   plt.plot(m_g,   y_g,   \"-o\", ms=3, label=\"Galaxies\")\n",
+    "def plot_logN_all_stars_gals(m_all, y_all, N_all,\n",
+    "                             m_s,   y_s,   N_s,\n",
+    "                             m_g,   y_g,   N_g,\n",
+    "                             fit_res, fname):\n",
+    "    \"\"\"\n",
+    "    Overview plot: all / stars / galaxies, each with Poisson error bars\n",
+    "    in log10 N.\n",
+    "    \"\"\"\n",
+    "    def poisson_err(N, y):\n",
+    "        sigma = np.full_like(y, np.nan, float)\n",
+    "        mask = (N > 0) & np.isfinite(y)\n",
+    "        sigma[mask] = 1.0 / (np.log(10.0) * np.sqrt(N[mask]))\n",
+    "        return sigma, mask\n",
     "\n",
+    "    sigma_all, mask_all = poisson_err(N_all, y_all)\n",
+    "    sigma_s,   mask_s   = (None, None)\n",
+    "    sigma_g,   mask_g   = (None, None)\n",
+    "\n",
+    "    if m_s is not None and N_s is not None:\n",
+    "        sigma_s, mask_s = poisson_err(N_s, y_s)\n",
+    "    if m_g is not None and N_g is not None:\n",
+    "        sigma_g, mask_g = poisson_err(N_g, y_g)\n",
+    "\n",
+    "    plt.figure(figsize=(8, 5))\n",
+    "\n",
+    "    # all sources\n",
+    "    if m_all is not None and np.any(mask_all):\n",
+    "        plt.errorbar(m_all[mask_all], y_all[mask_all],\n",
+    "                     yerr=sigma_all[mask_all],\n",
+    "                     fmt=\"-o\", ms=3, lw=1.0, capsize=2,\n",
+    "                     label=\"All\")\n",
+    "\n",
+    "    # stars\n",
+    "    if (m_s is not None) and (sigma_s is not None) and np.any(mask_s):\n",
+    "        plt.errorbar(m_s[mask_s], y_s[mask_s],\n",
+    "                     yerr=sigma_s[mask_s],\n",
+    "                     fmt=\"-s\", ms=3, lw=1.0, capsize=2,\n",
+    "                     label=\"Stars\")\n",
+    "\n",
+    "    # galaxies\n",
+    "    if (m_g is not None) and (sigma_g is not None) and np.any(mask_g):\n",
+    "        plt.errorbar(m_g[mask_g], y_g[mask_g],\n",
+    "                     yerr=sigma_g[mask_g],\n",
+    "                     fmt=\"^-\", ms=3, lw=1.0, capsize=2,\n",
+    "                     label=\"Galaxies\")\n",
+    "\n",
+    "    # optional: overplot the galaxy fit line if available\n",
     "    if (fit_res is not None) and (fit_res[\"m_fit\"].size > 0):\n",
     "        a, sa = fit_res[\"a\"], fit_res[\"sa\"]\n",
-    "        m = fit_res[\"m_fit\"]\n",
-    "        plt.plot(m, fit_res[\"a\"]*m + fit_res[\"b\"], \"r-\", lw=2,\n",
-    "                 label=f\"Gal fit: {a:.3f}±{sa:.3f}\")\n",
+    "        m_fit = fit_res[\"m_fit\"]\n",
+    "        plt.plot(m_fit, a*m_fit + fit_res[\"b\"], \"r-\",\n",
+    "                 lw=2, label=f\"Gal fit: {a:.3f}±{sa:.3f}\")\n",
     "\n",
     "    plt.xlabel(\"Calibrated magnitude limit m\")\n",
     "    plt.ylabel(r\"$\\log_{10} N(m)$\")\n",
@@ -460,13 +501,17 @@
     "\n",
     "    plt.figure(figsize=(8,5))\n",
     "\n",
-    "    # excluded points\n",
     "    if fit_res is not None:\n",
     "        mask_fit = np.isin(m_grid_g, fit_res[\"m_fit\"])\n",
-    "        plt.scatter(m_grid_g[~mask_fit], y[~mask_fit], s=10,\n",
-    "                    color=\"lightgray\", label=\"excluded\")\n",
     "\n",
-    "        # fitted points with error bars\n",
+    "        # excluded bins (grey) with error bars\n",
+    "        if np.any(~mask_fit & okN):\n",
+    "            plt.errorbar(m_grid_g[~mask_fit & okN], y[~mask_fit & okN],\n",
+    "                         yerr=sigma_y[~mask_fit & okN],\n",
+    "                         fmt=\"o\", ms=3, capsize=2,\n",
+    "                         color=\"lightgray\", label=\"excluded\")\n",
+    "\n",
+    "        # fitted bins with error bars\n",
     "        plt.errorbar(fit_res[\"m_fit\"], fit_res[\"y_fit\"],\n",
     "                     yerr=fit_res[\"sigma_y\"], fmt=\"o\", ms=3,\n",
     "                     capsize=2, label=\"galaxies (Poisson err)\")\n",
@@ -496,7 +541,7 @@
     "    with fits.open(CLEAN_FITS) as hdul:\n",
     "        img = hdul[0].data.astype(float)\n",
     "\n",
-    "    # detection and kNN halo removal ---\n",
+    "    # detection and kNN halo removal\n",
     "    cat_raw, det_info = detect_sources(img)\n",
     "    print(\"[detect]\", det_info)\n",
     "    cat = knn_filter(cat_raw, img.shape)\n",
@@ -531,9 +576,11 @@
     "        else:\n",
     "            print(\"[fit] not enough points for galaxy fit\")\n",
     "\n",
-    "    # big overview plot: all / stars / galaxies\n",
-    "    plot_logN_all_stars_gals(m_all, y_all, m_s, y_s, m_g, y_g, fit_res,\n",
-    "                             OUT_LOGN_ALL_JPG)\n",
+    "    # big overview plot: all / stars / galaxies (now with error bars)\n",
+    "    plot_logN_all_stars_gals(m_all, y_all, N_all,\n",
+    "                             m_s, y_s, N_s,\n",
+    "                             m_g, y_g, N_g,\n",
+    "                             fit_res, OUT_LOGN_ALL_JPG)\n",
     "    print(\"Saved logN (all/stars/gals):\", OUT_LOGN_ALL_JPG)\n",
     "\n",
     "    # galaxies-only plot with Poisson error bars and fit line\n",
@@ -554,7 +601,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -568,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
